@@ -1,10 +1,15 @@
 package com.example.backend.model.user;
 
+import com.example.backend.model.application.Application;
 import com.example.backend.model.course.Course;
 import com.example.backend.model.notification.EmailService;
 import com.example.backend.model.role.Role;
 import com.example.backend.model.role.RoleRepository;
 import com.example.backend.auth.DTO.RegisterRequest;
+import com.example.backend.model.user.dto.AdminUserDto;
+import com.example.backend.model.user.dto.CoordinatorDto;
+import com.example.backend.model.user.dto.CoordinatorWithCoursesDto;
+import com.example.backend.model.user.dto.UserDTO;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -26,6 +31,7 @@ public class UserService implements UserDetailsService {
     private final PasswordEncoder passwordEncoder;
     private final EmailService emailService;
     private final com.example.backend.model.course.CourseRepository courseRepository;
+    private final UserMapper userMapper;
 
 
     public void registerUser(RegisterRequest registerRequest) {
@@ -34,17 +40,14 @@ public class UserService implements UserDetailsService {
         if (userRepository.existsByEmail(email)) {
             throw new IllegalArgumentException("Email is already taken!");
         }
+        User user = userMapper.toEntity(registerRequest);
 
         Role userRole = roleRepository.findByName("Candidate")
                 .orElseThrow(() -> new IllegalArgumentException("Role Candidate not found!"));
 
-        User user = new User();
-        user.setName(registerRequest.getName().trim());
-        user.setSurname(registerRequest.getSurname().trim());
+        user.setRole(userRole);
         user.setEmail(email);
         user.setPassword(passwordEncoder.encode(registerRequest.getPassword()));
-        user.setTelNumber(registerRequest.getTelNumber().trim());
-        user.setRole(userRole);
 
         userRepository.save(user);
         emailService.sendWelcomeEmail(user);
@@ -56,9 +59,9 @@ public class UserService implements UserDetailsService {
                 .orElseThrow(() -> new UsernameNotFoundException("Email not found: " + email));
     }
 
-    public java.util.List<UserDTO> getAllUsers() {
+    public List<UserDTO> getAllUsers() {
         return userRepository.findAll().stream()
-                .map(this::mapToDTO)
+                .map(userMapper::toDTO)
                 .collect(java.util.stream.Collectors.toList());
     }
 
@@ -81,17 +84,19 @@ public class UserService implements UserDetailsService {
 
         user.setRole(newRole);
         User updatedUser = userRepository.save(user);
-        return mapToDTO(updatedUser);
+        return userMapper.toDTO(updatedUser);
     }
 
-    private UserDTO mapToDTO(User user) {
-        return UserDTO.builder()
+
+    public CandidateWithApplicationDto mapToCandidateWithApplicationDto(User user, Application application) {
+        return CandidateWithApplicationDto.builder()
                 .id(user.getId())
                 .name(user.getName())
                 .surname(user.getSurname())
                 .email(user.getEmail())
-                .telNumber(user.getTelNumber())
-                .roleName(user.getRole().getName())
+                .applicationId(application.getId())
+                .isPaid(application.getIsPaid())
+                .status(application.getStatus().getDescription())
                 .build();
     }
 
@@ -101,18 +106,8 @@ public class UserService implements UserDetailsService {
 
     public List<AdminUserDto> getAllAdminUsers() {
         return userRepository.findAll().stream()
-                .map(this::mapToAdminUserDto)
+                .map(userMapper::toAdminDto)
                 .collect(Collectors.toList());
-    }
-
-    private AdminUserDto mapToAdminUserDto(User u) {
-        return new AdminUserDto(
-                u.getId(),
-                u.getName(),
-                u.getSurname(),
-                u.getEmail(),
-                u.getRole() != null ? u.getRole().getId() : null
-        );
     }
 
     @Transactional
@@ -123,7 +118,8 @@ public class UserService implements UserDetailsService {
                 .orElseThrow(() -> new IllegalArgumentException("Coordinator role not found"));
 
         user.setRole(coord);
-        return mapToAdminUserDto(userRepository.save(user));
+        User savedUser = userRepository.save(user);
+        return userMapper.toAdminDto(savedUser);
     }
 
     @Transactional
@@ -140,7 +136,8 @@ public class UserService implements UserDetailsService {
                 .orElseThrow(() -> new IllegalArgumentException("Applicant role not found"));
 
         user.setRole(applicant);
-        return mapToAdminUserDto(userRepository.save(user));
+        User savedUser = userRepository.save(user);
+        return userMapper.toAdminDto(savedUser);
     }
 
     public List<CoordinatorDto> getAllCoordinators() {
@@ -153,21 +150,10 @@ public class UserService implements UserDetailsService {
     public List<CoordinatorWithCoursesDto> getCoordinatorsWithCourses() {
         return userRepository.findAll().stream()
                 .filter(u -> u.getRole() != null && u.getRole().getId() == 3)
-                .map(this::mapToCoordinatorWithCoursesDto)
-                .collect(Collectors.toList());
-    }
-
-    private CoordinatorWithCoursesDto mapToCoordinatorWithCoursesDto(User u) {
-        List<Course> courses = courseRepository.findByCoordinatorId(u.getId());
-        List<com.example.backend.model.course.CourseBriefDto> briefs = courses.stream()
-                .map(c -> new com.example.backend.model.course.CourseBriefDto(c.getId(), c.getName()))
-                .collect(Collectors.toList());
-
-        return new CoordinatorWithCoursesDto(
-                u.getId(),
-                u.getName() + " " + u.getSurname(),
-                u.getEmail(),
-                briefs
-        );
+                .map(u -> {
+                    List<Course> courses = courseRepository.findByCoordinatorId(u.getId());
+                    return userMapper.toCoordinatorWithCoursesDto(u, courses);
+                })
+                .toList();
     }
 }
